--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -141,6 +141,14 @@ body {
   text-decoration: none;
 }
 
+#read-poem {
+  margin-left: 1.5rem;
+}
+
+.tooltip::after {
+  font-family: 'PT Serif';
+}
+
 .text-metadata {
   color: #8e5821;
 }
@@ -175,4 +183,8 @@ body {
   font-family: 'PT Sans';
   justify-content: center !important;
   position: relative;
+}
+
+.about-content {
+  width: 75%;
 }
